This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: %c format does not accept large numbers on ucs-2 builds
Type: behavior Stage:
Components: Unicode Versions: Python 3.0
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: amaury.forgeotdarc
Priority: normal Keywords:

Created on 2008-07-04 09:02 by amaury.forgeotdarc, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Messages (2)
msg69247 - (view) Author: Amaury Forgeot d'Arc (amaury.forgeotdarc) * (Python committer) Date: 2008-07-04 09:02
Since python3.0, chr(0x2f81a) works even on narrow Unicode builds, but 
>>> "%c" % 0x2f81a
OverflowError: %c arg not in range(0x10000) (narrow Python build)

Likewise, Py_BuildValue("C") should accept codes outside the BMP.
msg69268 - (view) Author: Amaury Forgeot d'Arc (amaury.forgeotdarc) * (Python committer) Date: 2008-07-04 21:31
Committed as r64717.
History
Date User Action Args
2022-04-11 14:56:36adminsetgithub: 47530
2008-07-04 21:31:38amaury.forgeotdarcsetstatus: open -> closed
type: behavior
resolution: fixed
messages: + msg69268
2008-07-04 09:02:02amaury.forgeotdarccreate