Issue #3280: like chr() already does, the "%c" format now accepts the full unicode range even on "narrow Unicode" builds; the result is a pair of UTF-16 surrogates.